Added new experience and removed some lines from previous intern role.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Atul Gupta</h1>
-      <p>I'm <span class="typed"
-          data-typed-items="a Full Stack Engineer, a Software Developer, a Cloud Enthusiast"></span>
+      <p>I'm <span class="typed" data-typed-items="a Software Developer, a Python Developer, a Cloud Enthusiast"></span>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/atulguptag" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
@@ -165,8 +164,7 @@
               I am a self-taught python programmer with a deep passion for
               creating innovative and engaging web projects. I am committed to
               staying up-to-date with the latest trends and best practices in
-              the industry. Although I don’t have any professional experience
-              yet, I've gained a wealth of knowledge and skills through my
+              the industry. I've gained a wealth of knowledge and skills through my
               personal projects.
             </p>
           </div>
@@ -176,7 +174,7 @@
     <!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Skills</h2>
@@ -206,9 +204,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">AWS / GCP <i class="val">50%</i></span>
+              <span class="skill">AWS / GCP <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -216,15 +214,15 @@
 
           <div class="col-lg-6">
             <div class="progress">
-              <span class="skill">React Js <i class="val">60%</i></span>
+              <span class="skill">React Js <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SQL / PostgreSQL <i class="val">70%</i></span>
+              <span class="skill">MySQL / PostgreSQL <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -405,63 +403,47 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="timeline-item">
+              <h4>Python Developer Intern - <span>Moneyy.ai</span> | <span>Feb 2025 - Present</span>
+              </h4>
+
+              <p><strong>Key Responsibilities:</strong></p>
+              <ul>
+                <li>Developed and maintained multiple Python scripts for stocks processing and analysis, ensuring high
+                  efficiency and accuracy.
+                </li>
+                <li>Collaborated with the team memebers to design and implement backtesting on Stocks, improving the accuracy of
+                  predictions by 25%.
+                </li>
+                <li>Worked on integrating multiple APIs to fetch real-time stocks, enhancing the overall code efficiency.
+                </li>
+              </ul>
+            </div>
+
+            <div class="timeline-item">
               <h4>Software Developer Intern - <span>WorksNet Pvt. Limited</span> | <span>June 2024 - December
                   2024</span>
               </h4>
 
               <p><strong>Key Responsibilities:</strong></p>
               <ul>
-                <li>Developed and maintained web applications using <b>Python (Django) and React.js</b>,
-                  automating key
-                  processes like exam creation, admit card generation, and student ID card creation.</li>
-                <li>Collaborated with cross-functional teams to design, develop, and deploy scalable applications,
-                  ensuring smooth integration of various features for improved efficiency.</li>
-                <li>Enhanced internal systems, improving usability for teachers and administrators, leading to faster
-                  exam creation, quicker admit card processing, and simplified ID card generation.</li>
-                <li>Automated the generation of admit cards and student ID cards, ensuring that all necessary student
-                  details were included and helping to streamline the administrative processes.</li>
-                <li>Contributed to the testing and documentation of software processes to ensure the systems operated
-                  smoothly and the workflow was well-organized.</li>
-                <li>Collaborated with teams to understand project needs, troubleshoot problems, and ensure all
-                  components of the system worked seamlessly together.</li>
+                <li>Architected and implemented full-stack educational management system using Python (Django) and
+                  React.js, resulting in <b> 20% revenue growth </b> through automation of examination workflows,
+                  student ID generation, and administrative processes.
+                </li>
                 <li>Designed and implemented a <b>Social Auto Posting features especially LinkedIn auto-posting
-                    system</b> to
-                  schedule and share posts automatically on the company's page,
+                    system</b> to schedule and share posts automatically on the company's page,
                   ensuring regular updates and professional engagement on the platform.
                 </li>
                 <li>Integrated <b>AI-driven content generation</b> to create engaging topics, detailed write-ups, and
-                  concise
-                  key points, making content creation faster and more efficient.
+                  concise key points, making content creation faster and more efficient.
                 </li>
                 <li>Worked closely with the team to align the system with the company's content strategy related to
-                  SaaS,
-                  making it easier to share key updates and announcements.
+                  SaaS, making it easier to share key updates and announcements.
+                </li>
+                <li>Spearheaded development of AI-powered content automation pipeline using Python, increasing social
+                  media engagement by 15% and reducing content creation time by 60% while maintaining quality standards.
                 </li>
               </ul>
-
-              <p><strong>Key Achievements:</strong></p>
-              <ul>
-                <li>Successfully automated the exam generation process, resulting in significant time savings for
-                  teachers and an overall increase in productivity.</li>
-                <li>Streamlined the admit card generation process, reducing the time spent on generating and
-                  distributing them to students, which helped improve overall efficiency.</li>
-                <li>Developed an easy-to-use tool for creating student ID cards, simplifying the process for the
-                  school while ensuring that the ID cards included all necessary information.</li>
-                <li>Successfully launched the <b>LinkedIn auto-posting tool</b>, which led to a <b>15% increase in
-                    engagement</b>
-                  with posts and a stronger online presence.
-                </li>
-                <li>Used AI to generate compelling topics and their detailed content, Summarizing each into 5 main key
-                  points for easy consumption and effective messaging.
-                </li>
-              </ul>
-              <p><strong>Additional Impact:</strong></p>
-              <li>Contributed to a <b>20% increase</b> in overall company profits by improving operational efficiency
-                and
-                customer satisfaction.</li>
-              <li>Helped the team focus on strategic initiatives by reducing the manual effort involved in social
-                media management and content generation.
-              </li>
             </div>
           </div>
         </div>
