--- a/index.html
+++ b/index.html
@@ -411,10 +411,12 @@
                 <li>Developed and maintained multiple Python scripts for stocks processing and analysis, ensuring high
                   efficiency and accuracy.
                 </li>
-                <li>Collaborated with the team memebers to design and implement backtesting on Stocks, improving the accuracy of
+                <li>Collaborated with the team memebers to design and implement backtesting on Stocks, improving the
+                  accuracy of
                   predictions by 25%.
                 </li>
-                <li>Worked on integrating multiple APIs to fetch real-time stocks, enhancing the overall code efficiency.
+                <li>Worked on integrating multiple APIs to fetch real-time stocks, enhancing the overall code
+                  efficiency.
                 </li>
               </ul>
             </div>
